fixed alignment issue on grid

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -10,7 +10,7 @@ html body {
 }
 
 #header {
-    padding-top: 10vh;
+    padding-top: 5vh;
     padding-bottom: 10vh;
 }
 
@@ -20,4 +20,21 @@ html body {
 
 #row {
     padding-bottom: 40px;
+}
+
+#left-col {
+    padding-left: 0px;
+}
+
+#center-img {
+    display: block;
+    margin: 0 auto;
+}
+
+#right-img {
+    float: right;
+}
+
+#right-col {
+    padding-right: 0px;
 }
